kuber/dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-dp
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: hw14auth
          image: kisuni/hw14auth
          ports:
            - containerPort: 8000
      volumes:
        - name: postgres
          persistentVolumeClaim:
            claimName: postgres
