kuber/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /users/login
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /signup
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
